--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta name="author" content="Mahshid Saadatyar">
 	<meta name="description" content="resume">
 	<meta name="keywords" content="resume, job experiences, microsoft office, translation, english, expert">
+	<meta name="viewport" content="width=device-width">
 
 	<title> My Resume</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
